fixed dropdown menu text color not visible for mobile

--- a/public/elements/css/header-style.css
+++ b/public/elements/css/header-style.css
@@ -75,6 +75,9 @@
 	    display: block;
 	    padding: 20px 30px 20px;
 	}
+	.tm-nav .dropdown-menu li a {
+		color: #838383;
+	}
 	.mobile-menu-icon {
 	    display: block;
 	    cursor: pointer;
